--- a/scss/navbar/_navbar_toggle.scss
+++ b/scss/navbar/_navbar_toggle.scss
@@ -25,8 +25,6 @@ body.sidenav-toggled {
     }
   }
   .navbar-sidenav {
-    overflow-x: hidden;
-
     width: $sidenav-collapsed-width;
     .nav-link-text {
       display: none;
@@ -43,6 +41,6 @@ body.sidenav-toggled {
     }
   }
   .navbar-sidenav-tooltip.show {
-    display: none;
+    display: flex;
   }
 }
